tests/machine/x/java/for_map_collection.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsfor_map_collection123972279/001/Main.java:13: error: for-each not applicable to expression type
	for (Object k : m) {
	                ^
  required: array or java.lang.Iterable
  found:    DataClass1
1 error


  1| var m = {"a": 1, "b": 2}
  2| for k in m {